tests/miniJava/neg/000107_mutation.MiniJava
class java { public int void Main ( String [ ] java ) { { } } }
